# training-pipeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
configs/: example.yaml  pii_rules.yaml  tools.yaml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  CONFIGURATION.md  EXAMPLES.md  GENERATION.md  PERSONA.md  PII_POLICY.md  REPLACEMENT_CRITERIA.md  SCHEMAS.md
examples/: persona.example.md
examples/openagri_sample/: README.md  logs.jsonl  persona.md  run.sh  tools.yaml
examples/sample_logs/: agent_session.jsonl  qa_session.jsonl
src/training_pipeline/: __init__.py  cli.py  config.py  manifest.py
src/training_pipeline/eval/: __init__.py  compare.py  replacement.py  tool_use.py
src/training_pipeline/export/: __init__.py  dpo.py  sft.py  shards.py  templates.py
src/training_pipeline/generate/: __init__.py  difficulty.py  generator.py  mock_tools.py  seeds.py
src/training_pipeline/ingest/: __init__.py  normalizer.py  parsers.py  sources.py
src/training_pipeline/persona/: __init__.py  dpo_synthesis.py  loader.py  scorer.py
src/training_pipeline/pii/: __init__.py  audit.py  ner.py  orchestrator.py  redactor.py  rules.py  structured_fields.py
src/training_pipeline/pii/engines/: __init__.py  indicner.py  presidio.py
src/training_pipeline/pii/recognizers/: __init__.py  indian_ids.py
src/training_pipeline/schemas/: __init__.py  events.py  exports.py
src/training_pipeline/tagging/: __init__.py  complexity.py  stratify.py
src/training_pipeline/validate/: __init__.py  consistency.py  splits.py  template_dryrun.py
tests/: conftest.py  test_cli.py  test_eval.py  test_export.py  test_generate.py  test_ingest.py  test_manifest.py  test_persona.py  test_pii.py  test_pii_indic.py  test_replacement.py  test_schemas.py  test_tagging.py  test_validate.py
